--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
+    
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   rename: ^2.1.1
+  http: ^0.13.6 
+  firebase_core: ^2.13.0
+  firebase_auth: ^4.6.1
+  cloud_firestore: ^4.7.1
+  firebase_storage: ^11.2.2
+  hive: ^2.2.3
+  path_provider: ^2.0.15
+  
+ 
 
   
 
